feat : 플레이어가 카운터와 상호작용.
- E(keyboard) 입력 시 카운터와 상호작용.

Close #5

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -112,5 +112,7 @@
     "fortran": "cd $dir && gfortran $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
     "sml": "cd $dir && sml $fileName"
   },
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "editor.snippetSuggestions": "inline",
+  "editor.tabCompletion": "onlySnippets"
 }
