feat : 선택 가능한 카운터 하이라이트
- 현재 위치에서 E 키로 선택하여 상호작용 가능한 카운터가 하이라이트 되어 식별가능

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -114,5 +114,6 @@
   },
   "editor.tabSize": 2,
   "editor.snippetSuggestions": "inline",
-  "editor.tabCompletion": "onlySnippets"
+  "editor.tabCompletion": "onlySnippets",
+  "editor.suggest.showReferences": false
 }
